--- a/index.html
+++ b/index.html
@@ -9,13 +9,35 @@
 </head>
 <body>
 	<!-- version desktop -->
+	
 	<div class="contenedor" id="cont">
-		
+
+		<!-- barra navegacion -->
+		<div class="row">
+			<div class="col-1-1 nav-bar">
+				<div class="subcontenedor nav" id="subcont">
+					<div class="left col-1-3">
+						<div class="options" id="logo"> <span>Bunny's</span><span class="text-uppercase">love</span> </div>
+					</div>
+					<div class="right col-8-12">
+						<div class="options text-uppercase">bunnys</div>
+						<div class="options text-uppercase">cute photos</div>
+						<div class="options text-uppercase">rabbit fashion</div>
+						<div class="options text-uppercase">news bunny's</div>
+						<div class="options text-uppercase">features</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- header -->
+		<div class="header" id="header">
+			<div class="row">
+				<div class="col-1-1 head"></div>
+			</div>
+		</div>
 	</div>
-	<div class="conejitos" id="conejitos-final"></div>
-	<nav class="navBar" id="nav-bar">
-		
-	</nav>
+	
 
 	<script src="assets/js/app.js"></script>
 </body>
