--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bunny Love</title>
+	<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Prompt" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/common.css">
 	<link rel="stylesheet" href="assets/css/main.css">
 	<link rel="stylesheet" href="assets/css/media.css">
@@ -33,10 +34,21 @@
 		<!-- header -->
 		<div class="header" id="header">
 			<div class="row">
-				<div class="col-1-1 head"></div>
+				<div class="col-1-1 head">
+					<div class="subcontenedor head" id="subcont">
+						<div class="contTrans" id="cont-trans">
+							<div class="textoHeader" id="texto-header">
+								<h1>Soft Bunny</h1>
+								<h6>Live - Love - Laugh</h6>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
+
+	<!-- fotos con descripcion -->
 	
 
 	<script src="assets/js/app.js"></script>
