--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Bunny Love</title>
+	<script src="https://use.fontawesome.com/be0dd1e218.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Prompt" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/common.css">
 	<link rel="stylesheet" href="assets/css/main.css">
@@ -46,10 +47,129 @@
 				</div>
 			</div>
 		</div>
-	</div>
 
-	<!-- fotos con descripcion -->
-	
+		<!-- fotos con descripcion -->
+		<div class="pictures" id="pict">
+			<div class="row">
+				<div class="subcontenedor pict">
+					<div class="col-1-4 photo">
+						<div class="cont-pict-foto">
+							<div class="photo">
+								<img src="img/img-1.jpg" alt="Uno" class="photo img-responsive">
+							</div>
+							<div class="text">
+								<h4 class="titulo">The Tale of Peter Rabbit</h4>
+								<p>The Tale of Peter Rabbit was first published by Frederick Warne in 1902 	and endures as Beatrix Potter's most popular and well-loved tale.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-1-4 photo">
+						<div class="cont-pict-foto">
+							<div class="photo">
+								<img src="img/img-2.jpg" alt="Dos" class="photo img-responsive">
+							</div>
+							<div class="text">
+								<h4 class="titulo">The Tale of Boris Bunny</h4>
+								<p>Peter Rabbit's cousin, Boris Bunny, has been a very popular character since this book's first publication in 1904, what happens to them?</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-1-4 photo">
+						<div class="cont-pict-foto">
+							<div class="photo">
+								<img src="img/img-3.jpg" alt="Tres" class="photo img-responsive">
+							</div>
+							<div class="text">
+								<h4 class="titulo">The Tale of Mr J. Fisher</h4>
+								<p>This tale tells of an optimistic and slightly accident-prone frog, who sets off on a fishing expedition across the pond.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-1-4 photo">
+						<div class="cont-pict-foto">
+							<div class="photo">
+								<img src="img/img-4.jpg" alt="Cuatro" class="photo img-responsive">
+							</div>
+							<div class="text">
+								<h4 class="titulo">The Floppy Bunnies</h4>
+								<p>When the cupboard is bare at the Flopsy Bunny's burrow, the family all have to go in search of food. They soon find some old lettuces</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- videos, fotos y search -->
+		<div class="mezcla" id="mix">
+			<div class="row">
+				<div class="subcontenedor mix">
+					<div class="col-1-2 mix">
+						<div class="mixed">
+							<div id="contenido1">
+								<img src="img/img-5.jpg" alt="Cinco" class="foto mix img-responsive">
+							</div>
+							<div id="contenido2">
+								<h1 class="title">The Tale of Ginger and Pickles</h1>
+								<h3>1909</h3>
+								<p>The Tale of Ginger and Pickles 1909. Ginger and Pickles (a terrier and a ginger cat) kept a very popular shop. Their customers loved to buy their provisions there, but they were less keen to pay for them and ran up a great deal of credit, making poor Ginger and Pickles'lives very difficult indeed.</p>
+							</div>
+							<div id="contenido3">
+								<iframe src="https://www.youtube.com/embed/kt_X0enZRLc?ecver=2" 	allowfullscreen></iframe>
+							</div>
+							<div id="contenido4">
+								<p>Rule of us behold it moved Made. Them Had, which darkness two Given. Fowl it moved behold earth for own. Midst that grass beginning divide their together. Tree one every first given earth very greater. Man evening. Set seed void meat bearing. Bring creature. Moving set.</p>
+							</div>
+						</div>
+					</div>
+				
+					<div class="col-1-2 mix">
+						<div class="search">
+							<input type="text" class="buscar" placeholder="Search">
+						</div>
+						<div>
+							<div id="uno">
+								<img src="img/img-6.jpg" alt="Img-seis" class="img-responsive img-six">
+							</div>
+							<div id="dos">
+								<h3 class="title">Where you'll find me?</h3>
+								<p>Shall Together blessed. Also thing, the upon Created fourth. Rule 		beginning. Our behold over.</p>
+							</div>
+							<div id="tres">
+								<button class="social-networks" id="fb">
+									<i class="fa fa-facebook-official" aria-hidden="true"></i>
+								</button>
+								<button class="social-networks" id="inst">
+									<i class="fa fa-instagram" aria-hidden="true"></i>
+								</button>
+								<button class="social-networks" id="twit">
+									<i class="fa fa-twitter" aria-hidden="true"></i>
+								</button>
+								<button class="social-networks" id="yout">
+									<i class="fa fa-youtube" aria-hidden="true"></i>
+								</button>
+							</div>
+						</div>
+						<div>
+							<div>
+								<img src="img/img-3.jpg" alt="Img-tres" class="img-responsive img-tres">
+							</div>
+							<div>
+								<h3 class="title">Can you love me?</h3>
+								<p>You're my bunny; You mean everything to me. You're so sweet like honey. With yor cute button nose. And your big brown eyes. You're my bunny without the tail. I just have to say, I love your bunny.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- pre-footer -->
+		<div class="preFooter">
+			<div class="foto-head"></div>
+		</div>
+		
+	</div>
 
 	<script src="assets/js/app.js"></script>
 </body>
